# uzi4d

./: Makefile  manage.py  pyproject.toml
analyzes/: apps.py
app/: apps.py  db.sqlite3  settings.py  urls.py  wsgi.py
app/admin/: __init__.py  contacts.py  documents.py  promotions.py  ratings.py  services.py  specialists.py  updater.py
app/forms/: specialists.py
app/migrations/: 0001_initial.py  0002_alter_specialist_guid_and_more.py  0003_remove_service_position.py  0004_city_alter_specialist_activity_and_more.py  0005_alter_service_name_alter_service_short_description.py  0006_promotion_alter_updater_start_update.py  0007_rating.py  0008_alter_rating_reviews_count.py  0009_alter_rating_photo_alter_rating_reviews_count.py  0010_rating_link.py  0011_license.py  0012_document_documentcategory_delete_license_and_more.py  0013_alter_documentcategory_options_service_preparation_and_more.py  0014_servicecatalog_alter_service_description.py  0015_remove_service_level_remove_service_lft_and_more.py  0016_servicecategory_level_servicecategory_lft_and_more.py  0017_remove_service_is_group_remove_service_on_main_and_more.py  0018_remove_servicecategory_catalogs_and_more.py  0019_remove_servicecategory_is_active.py  0020_remove_service_is_active.py  0021_license.py  0022_license_number.py
app/models/: __init__.py  contacts.py  documents.py  promotions.py  ratings.py  services.py  specialists.py  updater.py
app/services/: schemas.py  source.py  updater.py
app/specialists/: admin.py  apps.py  models.py
app/specialists/migrations/: 0001_initial.py  0002_alter_specialist_options_alter_specialist_activity_and_more.py
app/src/: settings.py  wsgi.py
app/templates/: contacts.html  documents.html  index.html  promotions.html  service.html  services.html  specialist.html  specialists.html
app/templates/includes/: footer.html  head.html  header.html  offcanvas.html  offices.html  pagination.html  scripts.html  specialist_card.html
app/templatetags/: date_humanize.py  pagination_page.py
app/updater/: admin.py  apps.py  models.py  schemas.py  service.py  source.py
app/updater/migrations/: 0001_initial.py  0002_alter_updater_options_alter_updater_error_log.py
app/utils/: query.py
app/views/: __init__.py  contacts.py  documents.py  index.py  promotions.py  services.py  specialists.py
